# kitconcept.api

./: .editorconfig  .gitignore  CHANGES.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  check-changelog.yml  code-analysis.yml  flake8.yml  isort.yml  pyroma.yml  tests.yml  zpretty.yml
news/: 1.internal  3.feature  5.feature  7.internal  9.feature  api-addon.feature  api-content-constrains.feature  api-content-serialize.feature  api-redirect.feature  api-user-create.bugfix  api-user-logout.feature  api-user-request_reset_password.feature  api-vocabulary.feature  change_password.feature  change_username.feature  template.md.j2  update_credentials.feature
requirements/: dev-tools.txt  dev.txt  plone.txt  plone5.txt
src/kitconcept/: __init__.py
src/kitconcept/api/: __init__.py  _typing.py  logger.py  testing.py
src/kitconcept/api/addon/: __init__.py  _installer.py
src/kitconcept/api/content/: __init__.py  _constrains.py  _serialize.py
src/kitconcept/api/env/: __init__.py
src/kitconcept/api/exc/: __init__.py
src/kitconcept/api/fti/: __init__.py  _fti.py
src/kitconcept/api/group/: __init__.py
src/kitconcept/api/portal/: __init__.py
src/kitconcept/api/redirection/: __init__.py  _redirection.py
src/kitconcept/api/relation/: __init__.py
src/kitconcept/api/tests/: __init__.py  test_addon.py  test_content_constrains.py  test_content_serialize.py  test_fti.py  test_redirection.py  test_user.py  test_vocabulary.py
src/kitconcept/api/user/: __init__.py  _user.py
src/kitconcept/api/vocabulary/: __init__.py  _vocabulary.py
