[metadata]
version = 1.0.0a4.dev0
name = kitconcept.api
description = Enhanced Python API for the Plone Content Management System
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: Core
    Framework :: Plone :: 5.2
    Framework :: Plone :: 6.0
    Framework :: Zope
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
keywords = Plone, CMS,
author = kitconcept GmbH
author_email = contact@kitconcept.com
url = https://kitconcept.com/
license = GPL version 2

[options]
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    setuptools>=36.2
    Plone
    plone.api>=2.0.0a2
    plone.restapi
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
test = Products.CMFPlone
       plone.app.dexterity
       plone.app.testing
       plone.testing
       plone.restapi[test]
       zest.releaser[recommended]
       zestreleaser.towncrier

[bdist_wheel]
universal = 0

[zest.releaser]
create-wheel = yes
